[fix] fix afl fatal crash

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 AFLplusplus/
 afl-libprotobuf-mutator/
-workdir/fuzz_output/
+workdir/fuzz_output*
 target
-*.bin
 .vscode/
-**/*.o
 .gdb*
+*.bin
+
+**/*.o
+**/*.bak
+**/*.txt
